force-app/main/default/objects/Account/fields/CNPJ_CPF__c.field-meta.xml
<CustomField>
    <fullName>CNPJ_CPF__c</fullName>
    <description>Documento fiscal do cliente — CNPJ (PJ) ou CPF (PF). Texto livre (sem máscara/validação de formato no v1, ver demanda-05).</description>
    <label>CNPJ/CPF</label>
    <length>20</length>
    <type>Text</type>
</CustomField>