force-app/main/default/objects/Account/fields/LinhaDeProduto__c.field-meta.xml
<CustomField>
    <fullName>LinhaDeProduto__c</fullName>
    <description>Linha(s) de produto da Cromatta associadas a esta Conta (Cromata, Flecha, Jato) — uma conta pode comprar de mais de uma linha, por isso multiselect. Ver business-scenario.md.</description>
    <label>Linha de Produto</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cromata</fullName>
            </value>
            <value>
                <fullName>Flecha</fullName>
            </value>
            <value>
                <fullName>Jato</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>