force-app/main/default/objects/Account/fields/OrigemCadastro__c.field-meta.xml
<CustomField>
    <fullName>OrigemCadastro__c</fullName>
    <description>Como esta Conta chegou até a Cromatta — mesmos valores do campo de origem do Lead (business-scenario.md), preservados após a conversão.</description>
    <label>Origem de Cadastro</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Feira</fullName>
            </value>
            <value>
                <fullName>Indicação</fullName>
            </value>
            <value>
                <fullName>Prospecção Ativa</fullName>
            </value>
            <value>
                <fullName>Internet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>