force-app/main/default/objects/Account/fields/PossuiContratoRecorrente__c.field-meta.xml
<CustomField>
    <fullName>PossuiContratoRecorrente__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica se a Conta tem compromisso de volume recorrente (contrato mensal) negociado — ver business-scenario.md, seção de regras de preço.</description>
    <label>Possui Contrato Recorrente</label>
    <type>Checkbox</type>
</CustomField>