force-app/main/default/objects/Account/fields/TipoPessoa__c.field-meta.xml
<CustomField>
    <fullName>TipoPessoa__c</fullName>
    <description>PF (pessoa física) ou PJ (pessoa jurídica) — ver business-scenario.md (mapeamento PJ=Business Account / PF=Individual Customer via Record Type, ADR 0001). Complementa o Record Type com um valor filtrável em relatórios/listas.</description>
    <label>Tipo de Pessoa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PF</fullName>
            </value>
            <value>
                <fullName>PJ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>