force-app/main/default/objects/Account/fields/UltimaCompra__c.field-meta.xml
<CustomField>
    <fullName>UltimaCompra__c</fullName>
    <description>Data do último pedido/venda fechada com esta Conta. Base do cálculo de StatusCarteira__c (clientes inativos há 60+ dias, ver business-scenario.md).</description>
    <label>Última Compra</label>
    <type>Date</type>
</CustomField>