force-app/main/default/objects/Account/validationRules/Conta_PJ_Campos_Obrigatorios.validationRule-meta.xml
<ValidationRule>
    <fullName>Conta_PJ_Campos_Obrigatorios</fullName>
    <active>true</active>
    <description>Para Conta Pessoa Jurídica (TipoPessoa__c = PJ), exige CNPJ_CPF__c (CNPJ) e Name (Razão Social). Nenhuma exigência para PF nesta fase — ver ADR 0004.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(TipoPessoa__c, &quot;PJ&quot;),
    OR(
        ISBLANK(CNPJ_CPF__c),
        ISBLANK(Name)
    )
)</errorConditionFormula>
    <errorMessage>Para Conta Pessoa Jurídica, CNPJ (CNPJ_CPF__c) e Razão Social (Nome da Conta) são obrigatórios.</errorMessage>
</ValidationRule>